# netease_lib

./: Cargo.toml  README.md
examples/: basic.rs
src/: lib.rs
src/api/: banner.rs  client.rs  lyric.rs  mod.rs  search.rs  song.rs
src/model/: banner.rs  common.rs  lyric.rs  mod.rs  search.rs  song.rs
src/utils/: cline_sign.rs  crypto.rs  mod.rs
src/utils/crypto/: aes.rs  mod.rs  rsa.rs
