[package]
name = "netease_lib"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.142"
rand = "0.8.5"
anyhow = "1.0.99"
aes = "0.9.0-rc.0"
cbc = "0.2.0-rc.0"
block-padding = "0.3"
rsa = { version = "0.9.8"}
reqwest = { version = "0.12.23", features = ["json","rustls-tls"] }
tokio = { version = "1.47.1" ,features = ["full"]}
base64 = "0.22.1"

[profile.release]
# 启用 LTO ，减小体积并提升性能
lto = "fat"
# 最小体积
opt-level = "z"
# strip 调试符号
strip = "symbols"
# 移除 panic 字符串
# panic = "abort"
# 不生成调试信息
# debug = false