[package]
name = "netease_lib"
version = "0.1.0"
edition = "2024"

[dependencies]
aes = "0.8.4"
anyhow = { version = "1.0.102", features = ["default"] }
cipher = "0.5.0"
ecb = "0.1.2"
hex = "0.4.3"
md5 = "0.8.0"
mac_address = "1.1.8"
reqwest = "0.13.2"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"

[dev-dependencies]
tokio = { version = "1.47.1", features = ["macros", "rt-multi-thread"] }

[lib]
name = "netease_lib"
crate-type = ["rlib", "staticlib", "cdylib"]

[profile.release]
# 启用 LTO ，减小体积并提升性能
lto = "fat"
# 最小体积
opt-level = "z"
# strip 调试符号
strip = "symbols"
# 移除 panic 字符串
# panic = "abort"
# 不生成调试信息
# debug = false
